--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Grid</title>
+    <title>Passat Alltrack 2021</title>
   </head>
   <body>
     <header>
@@ -46,7 +46,7 @@
         </p>
         <img
           src="https://carsguide-res.cloudinary.com/image/upload/f_auto,fl_lossy,q_auto,t_cg__marking_background__sm_/v1/editorial/volkswagen-passat-alltrack-premium-my21-tw-blue-1200x800-%2822%29.jpg"
-          alt="sss"
+          alt="New Volkswagen Passat"
         />
       </div>
       <div class="item3">
@@ -58,7 +58,7 @@
         </p>
         <img
           src="https://www.auto-data.net/images/f87/Volkswagen-Passat-Alltrack-B8-facelift-2019.jpg"
-          alt=""
+          alt="New Volkswagen Passat"
         />
       </div>
     </div>
